hw833 task 1. With ProGuard settings: minifyEnabled - false; multiDexEnabled - true(make dex files list, where 1 file has a fixed method limit).

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,9 @@ android {
         }
 
         debug {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            multiDexEnabled false
+            multiDexEnabled true
             shrinkResources false
         }
     }
