--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,10 @@ android {
         }
 
         debug {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            multiDexEnabled true
-            shrinkResources false
+            multiDexEnabled false
+            shrinkResources true
         }
     }
 }
